force-app/main/default/objects/Activity/fields/Lead_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Zip_Postal_Code__c</fullName>
    <description>This field is to enter Lead  Zip/Postal Code</description>
    <label>Lead Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>