force-app/main/default/objects/Activity/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
	<description>This field is used to select the locations those are linked to HR related account on which task is creating </description>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.Organization__c</field>
            <operation>equals</operation>
            <valueField>$Source.WhatId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Location</relationshipName>
    <type>Lookup</type>
</CustomField>