force-app/main/default/objects/Activity/fields/Mark_Complete__c.field-meta.xml
<CustomField>
    <fullName>Mark_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked it indicates that this meeting has been completed</description>
    <label>Mark Complete</label>
    <type>Checkbox</type>
</CustomField>