force-app/main/default/objects/Activity/fields/Mark_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Mark_Complete_Date__c</fullName>
    <description>Mark Complete Date</description>
    <label>Mark Complete Date</label>
    <type>Date</type>
</CustomField>