force-app/main/default/objects/Activity/fields/Meeting_Booked_Before_Event__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_Before_Event__c</fullName>
    <formula>if ( CreatedDate &lt;   ActivityDateTime  , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Booked Before Event</label>
    <type>Checkbox</type>
</CustomField>