force-app/main/default/objects/Activity/fields/Meeting_Booked_in_Advanced_by__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_in_Advanced_by__c</fullName>
    <formula>if(isblank(ActivityDateTime),0,ActivityDateTime - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Booked in Advanced by</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>