force-app/main/default/objects/Activity/fields/Meeting_Booked_When__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_When__c</fullName>
    <formula>if ( CreatedDate &lt; ActivityDateTime , &apos;Before Meeting&apos;, &apos;After Meeting&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Booked When</label>
    <type>Text</type>
</CustomField>