force-app/main/default/objects/Activity/fields/number_of_Tanks__c.field-meta.xml
<CustomField>
    <fullName>number_of_Tanks__c</fullName>
    <label>Number of Tanks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>