force-app/main/default/objects/Activity/fields/Parts_Washer_Model__c.field-meta.xml
<CustomField>
    <fullName>Parts_Washer_Model__c</fullName>
    <label>Parts Washer Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>