force-app/main/default/objects/Activity/fields/Parts_Washer_Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Parts_Washer_Troubleshooting__c</fullName>
    <label>Parts Washer Troubleshooting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>