force-app/main/default/objects/Activity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>PO Number</description>
    <inlineHelpText>Required when Call type Add/Change PO</inlineHelpText>
    <label>PO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>