force-app/main/default/objects/Activity/fields/Primary_Type_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Primary_Type_of_Service__c</fullName>
    <label>Primary Type of Service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UMO</fullName>
            </value>
            <value>
                <fullName>Parts Washer</fullName>
            </value>
            <value>
                <fullName>Containerized Waste</fullName>
            </value>
            <value>
                <fullName>Oil Filter Drum</fullName>
            </value>
            <value>
                <fullName>Oil Filter Bin</fullName>
            </value>
            <value>
                <fullName>WWF/AF Product</fullName>
            </value>
            <value>
                <fullName>Allied Product</fullName>
            </value>
            <value>
                <fullName>Lube Oil Sales</fullName>
            </value>
            <value>
                <fullName>VAC</fullName>
            </value>
            <value>
                <fullName>Used Antifreeze</fullName>
            </value>
            <value>
                <fullName>Oily Water</fullName>
            </value>
            <value>
                <fullName>Change Address</fullName>
            </value>
            <value>
                <fullName>Name/Ownership Change</fullName>
            </value>
            <value>
                <fullName>Update Email</fullName>
            </value>
            <value>
                <fullName>Service Term</fullName>
            </value>
            <value>
                <fullName>EPA ID</fullName>
            </value>
			<value>
                <fullName>Invoice Request</fullName>
            </value>
            <value>
                <fullName>Balance Inquiry</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Payment Issue</fullName>
            </value>
            <value>
                <fullName>Manifest issue</fullName>
            </value>
            <value>
                <fullName>Shipping documents</fullName>
            </value>
            <value>
                <fullName>AR Issue</fullName>
            </value>
			<value>
                <fullName>LOB List</fullName>
                <isActive>false</isActive>
                <label>LOB List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>