force-app/main/default/objects/Activity/fields/Product_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Return_Reason__c</fullName>
    <label>Product Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CS_Call_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better price</fullName>
            </value>
            <value>
                <fullName>Bought by mistake</fullName>
            </value>
            <value>
                <fullName>Didn’t approve purchase</fullName>
            </value>
            <value>
                <fullName>Inaccurate website description</fullName>
            </value>
            <value>
                <fullName>Item arrived too late</fullName>
            </value>
            <value>
                <fullName>Item defective or doesn’t work</fullName>
            </value>
            <value>
                <fullName>Missing or broken parts</fullName>
            </value>
            <value>
                <fullName>Product and shipping box both damaged</fullName>
            </value>
            <value>
                <fullName>Product damaged</fullName>
            </value>
            <value>
                <fullName>Received more than ordered</fullName>
            </value>
            <value>
                <fullName>Wrong item sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>