force-app/main/default/objects/Activity/fields/Reason_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_cancellation__c</fullName>
    <inlineHelpText>Required when Call type is Pull/Cancel</inlineHelpText>
    <label>Reason for cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better Competitor Price</fullName>
            </value>
            <value>
                <fullName>Change in Ownership</fullName>
            </value>
            <value>
                <fullName>Customer Cost Reduction</fullName>
            </value>
            <value>
                <fullName>Delinquent Account</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Poor Service</fullName>
            </value>
            <value>
                <fullName>Reduce Cleaning Needs</fullName>
            </value>
            <value>
                <fullName>Repeat Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>