force-app/main/default/objects/Activity/fields/Service_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Number__c</fullName>
    <description>Service Order Number</description>
    <label>Service Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>