force-app/main/default/objects/Activity/fields/Service_to_be_cancelled__c.field-meta.xml
<CustomField>
    <fullName>Service_to_be_cancelled__c</fullName>
    <inlineHelpText>Required when Call type is Pull/Cancel</inlineHelpText>
    <label>Service to be cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UMO</fullName>
            </value>
            <value>
                <fullName>Parts Washer</fullName>
            </value>
            <value>
                <fullName>Allied Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>