force-app/main/default/objects/Activity/fields/Task_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Task_Resolution__c</fullName>
    <label>Task Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raised price, raised volume and/or extended term to get green contract status</fullName>
            </value>
            <value>
                <fullName>Raised price, raised volume and/or extended term to get yellow contract status AND got DM approval</fullName>
            </value>
            <value>
                <fullName>Put on new contract</fullName>
            </value>
            <value>
                <fullName>No change got appropriate manager approval</fullName>
            </value>
            <value>
                <fullName>Pulled tank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>