force-app/main/default/objects/Activity/fields/Vertical_Marketing_Library__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Marketing_Library__c</fullName>
    <inlineHelpText>This is read-only</inlineHelpText>
    <label>Vertical Marketing Library</label>
    <type>Url</type>
</CustomField>