force-app/main/default/objects/Activity/fields/VM_Instructions__c.field-meta.xml
<CustomField>
    <fullName>VM_Instructions__c</fullName>
    <label>VM Instructions</label>
    <type>Url</type>
</CustomField>