force-app/main/default/objects/Activity/fields/Win_Id__c.field-meta.xml
<CustomField>
    <fullName>Win_Id__c</fullName>
    <label>Win Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>